--- a/WEBTEC/Home Page/homePage.html
+++ b/WEBTEC/Home Page/homePage.html
@@ -3,13 +3,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LitHUB</title>
-        <script src='homePage.js'></script>
+        <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src='/Home Page/homePage.js''></script>
     </head>
     <body>
         <div class="main">
             <div class="main-container">
                 <h1>LitHUB</h1>
-                <div class="pokemon-container">
+                <div class="books-container">
 
                 </div>
             </div>
